# damage-detection-processing

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  analyze_worker.py  docker-compose.yaml  main.py  pyproject.toml  slice_geotiff.py  slice_large_geotiff.py
alembic/: env.py
alembic/versions/: e577f09a7fa2_initial_migration.py
src/: config.py  data_loader.py  geospatial_mapping.py  logger.py  queue.py  storage.py
src/api/: __init__.py  analyzing_jobs.py  files.py  files_service.py  polygons.py
src/core/: debug.py  files_storage.py  geospatial_mapping.py  polygons_storage.py
src/core/analysis/: __init__.py  analyze_file.py  geometry.py  process_image.py
src/core/files/: __init__.py  files.py  slice_geotiff.py
src/database/: models.py  sql.py
src/files_storage/: __init__.py  client.py  donwload.py  upload.py
src/processing/: model.py  process_image.py
