[tool.poetry]
name = "damage-detection"
version = "0.1.0"
description = ""
authors = ["o-rumiantsev <oleksii.rumiantsev@gen.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
tensorflow = "^2.14.0"
opencv-python = "^4.8.1.78"
labelbox = "^3.54.1"
pillow = "^10.1.0"
tqdm = "^4.66.1"
pandas = "^2.1.3"
shapely = "^2.0.2"
segmentation-models = "^1.0.1"
scikit-image = "^0.22.0"
rasterio = "^1.3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
