[tool.poetry]
name = "damage-detection"
version = "0.1.0"
description = ""
authors = ["o-rumiantsev <oleksii.rumiantsev@gen.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
tensorflow = "^2.14.0"
opencv-python = "^4.8.1.78"
labelbox = "^3.54.1"
pillow = "^10.1.0"
tqdm = "^4.66.1"
pandas = "^2.1.3"
shapely = "^2.0.2"
segmentation-models = "^1.0.1"
scikit-image = "^0.22.0"
rasterio = "^1.3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
asyncio = "^3.4.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
psycopg2-binary = "^2.9.9"
geoalchemy2 = "^0.14.2"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
aio-pika = "^9.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
